// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MockedProvider allows for querying with the typename 1`] = `
Object {
  "__typename": "User",
  "id": "user_id",
  Symbol(id): "User:user_id",
}
`;

exports[`MockedProvider does not error if the variables match but have different order 1`] = `
Object {
  "__typename": "User",
  "id": "user_id",
  Symbol(id): "User:user_id",
}
`;

exports[`MockedProvider errors if the query in the mock and component do not match 1`] = `
[Error: Network error: No more mocked responses for the query: query GetUser($username: String!) {
  user(username: $username) {
    id
    __typename
  }
}
, variables: {"username":"mock_username"}]
`;

exports[`MockedProvider errors if the variables do not deep equal 1`] = `
[Error: Network error: No more mocked responses for the query: query GetUser($username: String!) {
  user(username: $username) {
    id
    __typename
  }
}
, variables: {"username":"some_user","age":42}]
`;

exports[`MockedProvider errors if the variables in the mock and component do not match 1`] = `
[Error: Network error: No more mocked responses for the query: query GetUser($username: String!) {
  user(username: $username) {
    id
    __typename
  }
}
, variables: {"username":"other_user"}]
`;

exports[`MockedProvider mocks the data 1`] = `
Object {
  "__typename": "User",
  "id": "user_id",
  Symbol(id): "User:user_id",
}
`;
